[gd_scene load_steps=2 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1026.0
margin_bottom = 600.0
color = Color( 0.0588235, 0.0862745, 0.482353, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 121.0
margin_top = 57.0
margin_right = 854.0
margin_bottom = 134.0

[node name="Button" type="Button" parent="Label"]
anchor_bottom = 0.13
margin_left = 73.0
margin_top = 19.0
margin_right = 327.0
margin_bottom = 55.99
text = "exibir"

[node name="Label" type="Label" parent="Label"]
margin_left = 454.0
margin_top = 20.0
margin_right = 622.0
margin_bottom = 65.0

[node name="Label2" type="Label" parent="."]
margin_left = 35.0
margin_top = 162.0
margin_right = 942.0
margin_bottom = 289.0

[node name="Button2" type="Button" parent="Label2"]
anchor_right = 0.013
anchor_bottom = 0.079
margin_left = 169.0
margin_top = 39.0
margin_right = 332.209
margin_bottom = 75.967
text = "salvar e exibir"
__meta__ = {
"_edit_group_": true
}

[node name="Label2" type="Label" parent="Label2"]
margin_left = 516.0
margin_top = 40.0
margin_right = 649.0
margin_bottom = 83.0
custom_colors/font_color = Color( 0.12549, 0.803922, 0.0588235, 1 )

[node name="TextEdit" type="TextEdit" parent="Label2"]
margin_left = 14.0
margin_top = 35.0
margin_right = 147.0
margin_bottom = 95.0

[node name="Label3" type="Label" parent="."]
margin_left = 41.0
margin_top = 322.0
margin_right = 1006.0
margin_bottom = 425.0
__meta__ = {
"_edit_group_": true
}

[node name="Button3" type="Button" parent="Label3"]
margin_left = 152.0
margin_top = 32.0
margin_right = 238.0
margin_bottom = 67.0
text = "exibir"

[node name="Label3" type="Label" parent="Label3"]
margin_left = 478.0
margin_top = 17.0
margin_right = 686.0
margin_bottom = 55.0

[node name="Label4" type="Label" parent="."]
margin_left = 42.0
margin_top = 475.0
margin_right = 955.0
margin_bottom = 552.0
__meta__ = {
"_edit_group_": true
}

[node name="Button4" type="Button" parent="Label4"]
margin_left = 126.0
margin_top = 17.0
margin_right = 227.0
margin_bottom = 55.0
text = "salvar e exibir"

[node name="Label4" type="Label" parent="Label4"]
margin_left = 394.0
margin_top = 19.0
margin_right = 526.0
margin_bottom = 49.0

[node name="TextEdit2" type="TextEdit" parent="Label4"]
margin_left = 19.0
margin_top = 12.0
margin_right = 78.0
margin_bottom = 52.0

[connection signal="pressed" from="Label/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Label2/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Label3/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Label4/Button4" to="." method="_on_Button4_pressed"]
